// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLoader > Arrow should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-blHHSb gjKlqY loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Brackets should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gtLWhw bTGoms loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Circle should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-egkSDF kglycs loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Dots should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-fAUdSK exeCBJ loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Filler should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-dntaoT vcBve loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Linear should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-ivxoEo SkWzp loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Pulse should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-ghWlax hokueD loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Rotation should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-kLhKbu cMrDQT loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Square should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-ixGGxD eoFoNx loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;
